--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Analysis of environmental movements effectiveness"
+title: "Analysis of environmental movements affectiveness"
 subtitle: "INFO 526 - Summer 2024 - Final Project"
 author: 
   - name: "Cole Johnson"
@@ -20,3 +20,233 @@ execute:
 ## Abstract
 
 Add project abstract here.
+
+## Introduction
+
+Add project introduction here. Talk about the dataset
+
+## Question 1: How are environmental movements affecting the Trash Wheels collections located that the end of rivers?
+
+### Introduction
+For this question I want to know the effects that environmental movements have on the pollutants that are being thrown into rivers where trash wheels are located. I would like to know if the amount of pollutants are decreasing and if the type of pollutants (recyclable versus non recyclable) are changing as a result of big environmental movements. I am interested in looking at this data because I have heard a ton of news over the last few years about environmental movements being more and more important and effective. I would like to know if all of these events actually change anything in peoples mind about pollutants or recyclables. 
+
+
+### Approach
+
+I first cleaned the dataset, making sure there were no blank data values that could change the analysis.
+
+### Analysis
+
+```{r setup}
+if (!require("pacman")) 
+  install.packages("pacman")
+
+# install packages
+pacman::p_load(tidyverse,
+               glue,
+               scales,
+               ggthemes,
+               viridis,
+               openintro,
+               patchwork,
+               dsbox,
+               ggridges,
+               dplyr,
+               fs,
+               janitor,
+               broom,
+               colorspace,
+               here,
+               palmerpenguins,
+               jpeg,
+               ggpubr,
+               tigris,
+               sf,
+               mapproj,
+               geofacet,
+               glue,
+               ggrepel,
+               ggspatial,
+               rnaturalearth,
+               rnaturalearthdata,
+               readxl,
+               patchwork,
+               shiny,
+               gghighlight
+               ) 
+#theme set
+theme_set(theme_minimal(base_size = 14))
+```
+
+```{r}
+
+trashwheel <- readr::read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2024/2024-03-05/trashwheel.csv')
+
+Movements <- tibble(date = c("2014-10-31", "2015-12-12", "2018-04-01", "2019-04-01","2021-01-01","2021-08-09"), description = c("IPCC Fifth Assessment Report", "Paris Agreement Signed", "Greta Thunberg starts school stike for climate", "First National CleanUp Day", "Biden rejoins Paris Accord", "IPCC Sixth Assessment Report"))
+
+#fix dates
+
+trashwheel <- trashwheel |>
+  filter(!is.na(Name)) |>
+  mutate(Date = paste0(str_split(Date, '\\/')[[1]][1],
+                          '/',
+                          str_split(Date, '\\/')[[1]][2]
+                          )
+         ) |>
+  mutate(Date = paste(Date, Year, sep = '/')) |>
+  mutate(Date = as.Date(Date, format = "%m/%d/%Y"))
+
+Movements <- Movements |>
+  mutate(date = as.Date(date)) |>
+  mutate(datenew = date + 1)
+
+#add recycle/nonrecycleqDate#add recycle/nonrecycleqDate#add recycle/nonrecyclequantity Cigarettebutts/100 because they are much smaller in size than everything else
+trashwheel2 <- trashwheel |>
+  mutate(Recyclable = PlasticBottles + GlassBottles + PlasticBags + Wrappers) |>
+  mutate(NonRecyclable = Polystyrene + CigaretteButts/100 + SportsBalls) |>
+  mutate(CigaretteButts = CigaretteButts/100)
+
+
+#pivot_longer to make the data graphable
+trashwheel3 <- trashwheel2 |>
+  pivot_longer(
+    cols = c("PlasticBottles", "Polystyrene", "CigaretteButts", "GlassBottles", "PlasticBags", "Wrappers", "SportsBalls", "Recyclable", "NonRecyclable"),
+    names_to = "MaterialType",
+    values_to = "Quantity"
+  )
+
+
+#Create Plot 1 - line graph with environmental movements annotated
+
+p <- trashwheel3 |>
+  ggplot() +
+  geom_smooth(se = FALSE, aes(x = as.Date(Date), y = Quantity, color = MaterialType)) +
+  geom_vline(data = Movements, 
+             xintercept = as.Date(c("2014-10-31", "2015-12-12", "2018-04-01", "2019-04-01","2021-01-01","2021-08-09")),
+             color = "black",
+             size = 1
+             ) +
+  annotate("text", 
+           x = as.Date(c("2014-7-31", "2015-9-12", "2018-1-01", "2019-1-01","2020-10-01","2021-05-09")),
+           y = 4000,
+           label = c("IPCC Fifth Assessment Report", "Paris Agreement Signed", "Greta Thunberg starts school stike for climate", "First National CleanUp Day", "Biden rejoins Paris Accord", "IPCC Sixth Assessment Report"),
+           angle = 90,
+           size = 3.5
+           ) 
+
+p1 <- p +
+  labs(
+    title = "Quantity of Pollutants Removed from all Trash Rivers",
+    subtitle = "CigaretteButts quantity adjusted 100:1",
+    caption = "Verticle lines represent major environmental movements
+    Sources:tidyverse, various other sources",
+    y = "Number of Pollutants",
+    x = NULL
+  ) +
+  theme(
+    plot.subtitle = element_text(size =  10)
+  ) +
+  guides(color = guide_legend(title = "Pollutant Type"))
+
+  
+p2 <- p +
+  labs(
+    title = "Quantity of Recyclable Pollutants Removed from all Trash Rivers",
+    subtitle = "CigaretteButts quantity adjusted 100:1",
+    caption = "Verticle lines represent major environmental movements
+    Sources:tidyverse, various other sources",
+    y = "Number of Pollutants",
+    x = NULL
+  ) +
+  theme(
+    plot.subtitle = element_text(size =  10)
+  ) +   
+  gghighlight(MaterialType == 'Recyclable')
+
+p3 <- p +
+  labs(
+    title = "Quantity of Recyclable Pollutants Removed from all Trash Rivers",
+    subtitle = "CigaretteButts quantity adjusted 100:1",
+    caption = "Verticle lines represent major environmental movements
+    Sources:tidyverse, various other sources",
+    y = "Number of Pollutants",
+    x = NULL
+  ) +
+  theme(
+    plot.subtitle = element_text(size =  10)
+  ) +   
+  gghighlight(MaterialType == 'NonRecyclable')
+ 
+p1
+p2
+p3
+#Sources:
+#Tidyverse
+#https://www.ipcc.ch/site/assets/uploads/2018/04/ipcc_ar5_leaflet.pdf
+#https://treaties.un.org/pages/ViewDetails.aspx?src=TREATY&mtdsg_no=XXVII-7-d&chapter=27&clang=_en
+#https://www.euronews.com/green/2023/09/10/fridays-for-future-gretas-school-strikes-led-a-third-of-swiss-citizens-to-change-their-hab
+#https://www.nationalcleanupday.org/earth-day
+#https://apnews.com/article/joe-biden-executive-orders-b5b409da08e42414b9a12e2c67ee2df6
+#https://www.ipcc.ch/assessment-report/ar6/
+  
+```
+This visualization shows pollutant quantities being pulled from the end of rivers by Trash Wheels overtime. The visualization also shows the dates in which major environmental movements began or had a change. From the visualization we can see the non-recyclable quantity decrease fairly steadily over the entire period looked at. This visualization also tells us that certain items such as plastic bottles saw no change in quantities polluted into rivers over this period. Although this visualization shows the trend of quantities of pollutant types over time, I would like to see more in=depth of how each movement effected the quantities of recyclables and non-recyclables.
+
+``` {r}
+#manipulate data
+trashwheel4 <- trashwheel3 |>
+  mutate(
+         FifthAssessmentStart = "2014-10-31", 
+         FifthAssessmentEnd = "2015-12-12",
+         ParisAgreementStart = "2015-12-12",
+         ParisAgreementEnd = "2018-04-01",
+         SchoolStrikeStart = "2018-04-01",
+         SchoolStrikeEnd = "2019-04-01",
+         FirstCleanUpDayStart = "2019-04-01",
+         FirstCleanUpDayEnd = "2021-01-01",
+         RejoinParisAccordStart = "2021-01-01",
+         RejoinParisAccordEnd = "2021-08-09",
+         SixthReportStart = "2021-08-09",
+         SixthReportEnd = "2023-05-16"
+         ) |>
+  mutate(movement = case_when(
+                              Date > FifthAssessmentStart & Date <= FifthAssessmentEnd ~ "IPCC Fifth Assessment Report",
+                              Date > ParisAgreementStart & Date <= ParisAgreementEnd ~ "Paris Agreement Signed",
+                              Date > SchoolStrikeStart & Date <= SchoolStrikeEnd ~ "Greta Thunberg starts school stike for climate",
+                              Date > FirstCleanUpDayStart & Date <= FirstCleanUpDayEnd ~ "First National CleanUp Day",
+                              Date > RejoinParisAccordStart & Date <= RejoinParisAccordEnd ~ "Biden Rejoins Paris Accord",
+                              Date > SixthReportStart & Date <= SixthReportEnd ~ "IPCC Sixth Assessment Report",
+                              TRUE ~ "FALSE"
+                              
+                              ),
+         YearsEncompassed = case_when(
+                              Date > FifthAssessmentStart & Date <= FifthAssessmentEnd ~ "1",
+                              Date > ParisAgreementStart & Date <= ParisAgreementEnd ~ "2",
+                              Date > SchoolStrikeStart & Date <= SchoolStrikeEnd ~ "1",
+                              Date > FirstCleanUpDayStart & Date <= FirstCleanUpDayEnd ~ "2",
+                              Date > RejoinParisAccordStart & Date <= RejoinParisAccordEnd ~ "1",
+                              Date > SixthReportStart & Date <= SixthReportEnd ~ "2",
+                              TRUE ~ "FALSE"
+                              
+                              )
+         ) |>
+  filter(movement != FALSE, MaterialType == c("NonRecyclable", "Recyclable"), !is.na(Quantity))
+
+#Group by and create quantities
+
+trashwheel5 <- trashwheel4 |>
+  group_by(movement, MaterialType, YearsEncompassed) |>
+  summarise(TotalQuantity = sum(Quantity)) |>
+  ungroup() |>
+  mutate(QuantityPerYear = TotalQuantity/as.numeric(YearsEncompassed))
+
+
+
+```
+
+
+
+### Discussion
+
+Talk about results here, what you gained from the graph
+
